[package]
name = "lvqr-cli"
description = "LVQR single binary entry point"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "server", "quic", "moq"]
categories = ["multimedia", "network-programming", "command-line-utilities"]

[lib]
name = "lvqr_cli"
path = "src/lib.rs"

[[bin]]
name = "lvqr"
path = "src/main.rs"

[features]
default = ["rtmp", "quinn-transport", "cluster"]
full = ["rtmp", "quinn-transport", "cluster"]
rtmp = ["lvqr-ingest/rtmp"]
quinn-transport = ["lvqr-relay/quinn-transport"]
# Enables cluster-mode CLI flags + bootstrap in `start()`. Disabled
# deployments fall back to the single-node path.
cluster = ["dep:lvqr-cluster"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-relay = { workspace = true }
lvqr-moq = { workspace = true }
moq-lite = { workspace = true }
lvqr-mesh = { workspace = true }
lvqr-ingest = { workspace = true }
lvqr-signal = { workspace = true }
lvqr-admin = { workspace = true }
lvqr-auth = { workspace = true, features = ["jwt"] }
lvqr-record = { workspace = true }
lvqr-fragment = { workspace = true }
lvqr-cmaf = { workspace = true }
lvqr-hls = { workspace = true }
lvqr-dash = { workspace = true }
lvqr-whep = { workspace = true }
lvqr-whip = { workspace = true }
lvqr-archive = { workspace = true }
lvqr-rtsp = { workspace = true }
lvqr-srt = { workspace = true }
lvqr-cluster = { workspace = true, optional = true }
lvqr-observability = { workspace = true }
lvqr-wasm = { workspace = true }

axum = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# Real RTMP client for the RTMP -> WS E2E test.
rml_rtmp = { workspace = true }
# WebSocket client for the RTMP -> WS E2E test.
tokio-tungstenite = "0.24"
# SRT client for the SRT -> HLS E2E test.
srt-tokio = "0.4"
futures-util = "0.3"
tracing-subscriber = { workspace = true }
tower = { workspace = true }
http = "1"
# Full-stack TestServer for auth_integration.rs.
lvqr-test-utils = { workspace = true }
# JWT minting in auth_integration.rs. Matches the version pulled in
# transitively through `lvqr-auth/jwt`.
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
