[package]
name = "lvqr-cli"
description = "LVQR single binary entry point"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "server", "quic", "moq"]
categories = ["multimedia", "network-programming", "command-line-utilities"]

[lib]
name = "lvqr_cli"
path = "src/lib.rs"

[[bin]]
name = "lvqr"
path = "src/main.rs"

[features]
default = ["rtmp", "quinn-transport", "cluster"]
full = ["rtmp", "quinn-transport", "cluster", "c2pa", "whisper"]
rtmp = ["lvqr-ingest/rtmp"]
quinn-transport = ["lvqr-relay/quinn-transport"]
# Enables cluster-mode CLI flags + bootstrap in `start()`. Disabled
# deployments fall back to the single-node path.
cluster = ["dep:lvqr-cluster"]
# Tier 4 item 4.3 session B3: enables the `/playback/verify/{broadcast}`
# admin route, plumbs `C2paConfig` through `ServeConfig`, and wires
# `lvqr_archive::provenance::finalize_broadcast_signed` into the drain-
# task termination path. Default off so operators without a provenance
# requirement do not link the c2pa-rs transitive closure.
c2pa = ["lvqr-archive/c2pa", "dep:c2pa"]
# Tier 4 item 4.5 session D: enables the `--whisper-model <PATH>` CLI
# flag, plumbs the model path through `ServeConfig`, and installs a
# `WhisperCaptionsFactory` + `AgentRunner` on the shared fragment
# registry inside `start()`. Default off so `cargo install lvqr-cli`
# does not pull `whisper-rs` (bindgen + cmake against whisper.cpp) or
# `symphonia` into the default build path.
whisper = [
    "dep:lvqr-agent",
    "dep:lvqr-agent-whisper",
    "lvqr-agent-whisper/whisper",
    "lvqr-test-utils/whisper",
]

[dependencies]
lvqr-core = { workspace = true }
lvqr-relay = { workspace = true }
lvqr-moq = { workspace = true }
moq-lite = { workspace = true }
lvqr-mesh = { workspace = true }
lvqr-ingest = { workspace = true }
lvqr-signal = { workspace = true }
lvqr-admin = { workspace = true }
lvqr-auth = { workspace = true, features = ["jwt"] }
lvqr-record = { workspace = true }
lvqr-fragment = { workspace = true }
lvqr-cmaf = { workspace = true }
lvqr-hls = { workspace = true }
lvqr-dash = { workspace = true }
lvqr-whep = { workspace = true }
lvqr-whip = { workspace = true }
lvqr-archive = { workspace = true }
lvqr-rtsp = { workspace = true }
lvqr-srt = { workspace = true }
lvqr-cluster = { workspace = true, optional = true }
lvqr-observability = { workspace = true }
lvqr-wasm = { workspace = true }
# Feature-gated on `c2pa`; exposes `c2pa::Reader` in the admin verify
# route. Inherited from the workspace so the lockfile-level pin tracks
# lvqr-archive's.
c2pa = { workspace = true, optional = true }
# Feature-gated on `whisper`; `start()` builds a
# `WhisperCaptionsFactory` + `AgentRunner` on the shared fragment
# registry so the captions track the HLS subtitle rendition consumes
# has a live producer. Without the feature neither dep links at all
# and the `--whisper-model` flag is absent from the CLI.
lvqr-agent = { workspace = true, optional = true }
lvqr-agent-whisper = { workspace = true, optional = true }

axum = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-util = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# Real RTMP client for the RTMP -> WS E2E test.
rml_rtmp = { workspace = true }
# WebSocket client for the RTMP -> WS E2E test.
tokio-tungstenite = "0.24"
# SRT client for the SRT -> HLS E2E test.
srt-tokio = "0.4"
futures-util = "0.3"
tracing-subscriber = { workspace = true }
tower = { workspace = true }
http = "1"
# Full-stack TestServer for auth_integration.rs. The `c2pa` feature
# is opt-in from the `lvqr-cli/c2pa` feature union: Tier 4 item 4.3
# session B3's `c2pa_verify_e2e.rs` test uses `TestServerConfig::
# with_c2pa(..)`, which is gated on `lvqr-test-utils/c2pa`. Activating
# it here keeps the dev-dep feature unified with the lvqr-cli feature
# flag when `cargo test -p lvqr-cli --features c2pa` runs, and is a
# no-op in default builds because dev-dependencies only resolve during
# test target compilation.
lvqr-test-utils = { workspace = true, features = ["c2pa"] }
# JWT minting in auth_integration.rs. Matches the version pulled in
# transitively through `lvqr-auth/jwt`.
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
# Federation two-cluster E2E test opens a real MoQ client against the
# second TestServer and reads announcements; it also names
# `FederationLink` to construct the config. Both are dev-only.
lvqr-cluster = { workspace = true }
moq-native = { workspace = true }
url = { workspace = true }
