[package]
name = "lvqr-cluster"
description = "Cluster-membership and broadcast-ownership plane for LVQR (chitchat-backed)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["cluster", "gossip", "chitchat", "streaming", "lvqr"]
categories = ["network-programming", "multimedia"]

[dependencies]
lvqr-core = { workspace = true }
# Tier 4 item 4.4 session A: the federation runner opens outbound MoQ
# sessions to peer-cluster relays. `lvqr-moq` is the only supported
# moq-lite facade; `moq-native` is the transport + client builder; `url`
# carries the remote relay URL + token query parameter.
lvqr-moq = { workspace = true }
moq-lite = { workspace = true }
moq-native = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chitchat = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros", "net"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
toml = { workspace = true }
