[package]
name = "lvqr-dash"
description = "MPEG-DASH egress for LVQR. Typed MPD generator + SegmentTemplate live profile renderer that reuses lvqr-cmaf segments."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "dash", "mpeg-dash", "mpd", "video"]
categories = ["multimedia", "web-programming"]

[dependencies]
lvqr-cmaf = { workspace = true }
lvqr-fragment = { workspace = true }
# Tier 4 item 4.7 session 109 A: the DASH drain task records one
# `LatencyTracker::record("dash")` sample per delivered fragment so
# DASH subscribers surface on the shared `/api/v1/slo` route and the
# Grafana alert pack alongside LL-HLS.
lvqr-admin = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
proptest = "1"
