[package]
name = "lvqr-hls"
description = "HTTP Live Streaming (HLS) egress for LVQR -- LL-HLS manifest generator built on CmafChunk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "hls", "ll-hls", "cmaf", "moq"]
categories = ["multimedia", "multimedia::video"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-cmaf = { workspace = true }

axum = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
lvqr-codec = { workspace = true }
lvqr-test-utils = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "playlist_builder"
harness = false
