[package]
name = "lvqr-ingest"
description = "RTMP/WHIP/SRT ingest translated to MoQ tracks for LVQR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "rtmp", "ingest", "video"]
categories = ["multimedia", "network-programming"]

[features]
default = ["rtmp"]
rtmp = ["dep:rml_rtmp"]
# Route the bridge's per-frame video media segment through
# `lvqr_cmaf::build_moof_mdat` instead of the in-crate hand-rolled
# `remux::fmp4::video_segment` writer. Default off during the
# Tier 2.3 transition so both paths exist side-by-side and the
# parity gate at `tests/parity_avc_segment.rs` keeps them honest.
# Enabled in a CI matrix job so every PR exercises the cmaf path
# end-to-end through the RTMP -> WebSocket / RTMP -> HLS
# integration tests.
cmaf-writer = ["dep:lvqr-cmaf"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-auth = { workspace = true }
lvqr-codec = { workspace = true }
lvqr-moq = { workspace = true }
lvqr-fragment = { workspace = true }
# Optional: only pulled in when the `cmaf-writer` feature is on.
# The dep direction is one-way (lvqr-ingest consumes lvqr-cmaf, not
# the reverse); the parity tests at `tests/parity_avc_*.rs` keep
# `lvqr-cmaf` as a dev-dep so the cycle stays broken.
lvqr-cmaf = { workspace = true, optional = true }
moq-lite = { workspace = true }

# RTMP
rml_rtmp = { workspace = true, optional = true }

# Async
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util = { workspace = true }
futures = { workspace = true }

# H.264 SPS parsing
h264-reader = { workspace = true }

# Utils
bytes = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
rml_rtmp = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = "1"
serde_json = { workspace = true }
lvqr-test-utils = { workspace = true }
# Dev-only: the AVC parity tests in `tests/parity_avc_init.rs` and
# `tests/parity_avc_segment.rs` drive `lvqr-cmaf`'s mp4-atom-backed
# writer side-by-side with the hand-rolled fMP4 writer in this crate
# and structurally diff the decoded Moov / Moof trees. The dep
# direction is one-way (lvqr-ingest as a dev consumer of lvqr-cmaf)
# so the future `cmaf-writer` feature can normal-dep lvqr-cmaf
# without creating a cycle.
lvqr-cmaf = { workspace = true }
mp4-atom = { version = "0.10", features = ["bytes"] }
