[package]
name = "lvqr-ingest"
description = "RTMP/WHIP/SRT ingest translated to MoQ tracks for LVQR"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "rtmp", "ingest", "video"]
categories = ["multimedia", "network-programming"]

[features]
default = ["rtmp"]
rtmp = ["dep:rml_rtmp"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-auth = { workspace = true }
lvqr-codec = { workspace = true }
lvqr-cmaf = { workspace = true }
lvqr-moq = { workspace = true }
lvqr-fragment = { workspace = true }
moq-lite = { workspace = true }

# RTMP
rml_rtmp = { workspace = true, optional = true }

# Async
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util = { workspace = true }
futures = { workspace = true }

# H.264 SPS parsing
h264-reader = { workspace = true }

# Utils
bytes = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }

# Base64 decode for SCTE-35 onCuePoint scte35-bin64 AMF0 payload
# (RTMP path; session 152 + RTMP unblock).
base64 = { workspace = true }

# rml_amf0 is pulled in transitively by rml_rtmp; pinning a direct
# edge so the Amf0Value match in the SCTE-35 onCuePoint dispatcher is
# self-documenting at the manifest level.
rml_amf0 = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
rml_rtmp = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = "1"
serde_json = { workspace = true }
lvqr-test-utils = { workspace = true }
