[package]
name = "lvqr-mesh"
description = "Peer discovery, tree building, and gossip for LVQR viewer mesh relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "mesh", "p2p", "relay"]
categories = ["multimedia", "network-programming"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-signal = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
