[package]
name = "lvqr-observability"
description = "Observability scaffold for LVQR (Tier 3 sessions G-J): config, subscriber setup, and lifetime-guard handle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["observability", "tracing", "otlp", "opentelemetry", "lvqr"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
