[package]
name = "lvqr-observability"
description = "Observability scaffold for LVQR (Tier 3 sessions G-J): config, subscriber setup, and lifetime-guard handle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["observability", "tracing", "otlp", "opentelemetry", "lvqr"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = { workspace = true }
metrics = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Tier 3 sessions H (span) + I (metric) OTLP export. These are always
# compiled in so the runtime-gated behavior (on / off based on
# `LVQR_OTLP_ENDPOINT`) stays internal to this crate and the rest of the
# workspace never has to care about OTel versioning.
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
futures = { workspace = true }
tokio = { workspace = true }
