[package]
name = "lvqr-record"
description = "Disk-based fMP4 segment recording for LVQR broadcasts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["recording", "fmp4", "streaming", "lvqr"]
categories = ["multimedia"]

[dependencies]
lvqr-moq = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros", "fs"] }
proptest = "1"
bytes = { workspace = true }
