[package]
name = "lvqr-test-utils"
description = "Test utilities for LVQR crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[features]
# Surface the `lvqr-cli/c2pa` feature through TestServer so integration
# tests that exercise the C2PA finalize + verify path (session 94 B3)
# can flip the config field on. Default off so the test-utils crate
# tracks `lvqr-cli`'s default feature set.
c2pa = ["lvqr-cli/c2pa", "lvqr-archive/c2pa"]
# Surface the `lvqr-cli/whisper` feature through TestServer so the
# `whisper_cli_e2e.rs` integration test can install a
# `WhisperCaptionsFactory` via `ServeConfig.whisper_model`. Default
# off; the `whisper-rs` bindgen + cmake closure stays out of the
# default test-utils build. Tier 4 item 4.5 session D.
whisper = ["lvqr-cli/whisper", "dep:lvqr-agent"]
# Surface the `lvqr-cli/transcode` feature through TestServer so the
# `transcode_ladder_e2e.rs` integration test can install a ladder via
# `ServeConfig::transcode_renditions`. Default off; the GStreamer 1.22+
# transitive closure stays out of the default test-utils build. Tier 4
# item 4.6 session 106 C.
transcode = ["lvqr-cli/transcode", "dep:lvqr-transcode"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-cli = { workspace = true }
lvqr-archive = { workspace = true }
lvqr-auth = { workspace = true }
lvqr-fragment = { workspace = true }
lvqr-wasm = { workspace = true }
# Tier 4 item 4.4 session B: TestServer accepts federation links via
# a `with_federation_link` builder; the public signature names
# `lvqr_cluster::FederationLink` directly, so we pull the crate in as
# a regular dep (its transitive surface is already present via
# `lvqr-cli`'s default `cluster` feature).
lvqr-cluster = { workspace = true }
# For the MoQ-client-side federation integration test: constructing a
# broadcast on one server and subscribing from another requires naming
# moq-lite types directly. lvqr-moq is the facade.
lvqr-moq = { workspace = true }
# Gated on the `whisper` feature: the test-utils `agent_runner()`
# accessor returns an `&lvqr_agent::AgentRunnerHandle`, so the
# dep must resolve when the feature is on.
lvqr-agent = { workspace = true, optional = true }
# Gated on the `transcode` feature: the TestServer's `transcode_runner()`
# accessor returns an `&lvqr_transcode::TranscodeRunnerHandle`, and the
# `with_transcode_ladder` builder names `RenditionSpec` directly.
lvqr-transcode = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "macros", "net"] }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"
