[package]
name = "lvqr-test-utils"
description = "Test utilities for LVQR crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[features]
# Surface the `lvqr-cli/c2pa` feature through TestServer so integration
# tests that exercise the C2PA finalize + verify path (session 94 B3)
# can flip the config field on. Default off so the test-utils crate
# tracks `lvqr-cli`'s default feature set.
c2pa = ["lvqr-cli/c2pa", "lvqr-archive/c2pa"]
# Surface the `lvqr-cli/whisper` feature through TestServer so the
# `whisper_cli_e2e.rs` integration test can install a
# `WhisperCaptionsFactory` via `ServeConfig.whisper_model`. Default
# off; the `whisper-rs` bindgen + cmake closure stays out of the
# default test-utils build. Tier 4 item 4.5 session D.
whisper = ["lvqr-cli/whisper", "dep:lvqr-agent"]
# Surface the `lvqr-cli/transcode` feature through TestServer so the
# `transcode_ladder_e2e.rs` integration test can install a ladder via
# `ServeConfig::transcode_renditions`. Default off; the GStreamer 1.22+
# transitive closure stays out of the default test-utils build. Tier 4
# item 4.6 session 106 C.
transcode = ["lvqr-cli/transcode", "dep:lvqr-transcode"]

[dependencies]
lvqr-core = { workspace = true }
lvqr-cli = { workspace = true }
# Session 155: the extracted `splice_insert_section_bytes` helper at
# `crates/lvqr-test-utils/src/scte35.rs` (moved from
# `crates/lvqr-cli/tests/scte35_hls_dash_e2e.rs`) names
# `lvqr_codec::scte35::{CMD_SPLICE_INSERT, TABLE_ID}` directly so the
# constants stay in sync with the relay's parser.
lvqr-codec = { workspace = true }
lvqr-archive = { workspace = true }
lvqr-auth = { workspace = true }
lvqr-fragment = { workspace = true }
lvqr-wasm = { workspace = true }
# Tier 4 item 4.4 session B: TestServer accepts federation links via
# a `with_federation_link` builder; the public signature names
# `lvqr_cluster::FederationLink` directly, so we pull the crate in as
# a regular dep (its transitive surface is already present via
# `lvqr-cli`'s default `cluster` feature).
lvqr-cluster = { workspace = true }
# Session 111-B1: TestServer surfaces the mesh coordinator via a
# `mesh_coordinator()` accessor whose return type names
# `lvqr_mesh::MeshCoordinator` directly; the dep must resolve at
# compile time.
lvqr-mesh = { workspace = true }
# Session 143: TestServer.with_mesh_ice_servers names
# `lvqr_signal::IceServer` directly so the dep must resolve. The
# crate is already a transitive of lvqr-cli, but naming a public
# type requires a direct dep at the leaf where the name appears.
lvqr-signal = { workspace = true }
# For the MoQ-client-side federation integration test: constructing a
# broadcast on one server and subscribing from another requires naming
# moq-lite types directly. lvqr-moq is the facade.
lvqr-moq = { workspace = true }
# Gated on the `whisper` feature: the test-utils `agent_runner()`
# accessor returns an `&lvqr_agent::AgentRunnerHandle`, so the
# dep must resolve when the feature is on.
lvqr-agent = { workspace = true, optional = true }
# Gated on the `transcode` feature: the TestServer's `transcode_runner()`
# accessor returns an `&lvqr_transcode::TranscodeRunnerHandle`, and the
# `with_transcode_ladder` builder names `RenditionSpec` directly.
lvqr-transcode = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync", "process"] }
# Session 133 (PLAN row 122-E): shared RTMP handshake helper in
# `lvqr_test_utils::rtmp`. rml_rtmp's `Handshake` state machine is
# the same one the 12 RTMP-class integration tests reimplemented.
rml_rtmp = { workspace = true }
# Session 155: the `scte35-rtmp-push` bin builds AMF0 onCuePoint
# carriages directly. Pinned to the same minor that lvqr-ingest's
# parse_oncuepoint_scte35 consumer uses so the wire shape stays
# consistent on both sides.
rml_amf0 = "0.3"
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
# Session 155: the `scte35-rtmp-push` bin needs a clap CLI + base64
# encoding for the AMF0 onCuePoint scte35-bin64 `data` property.
clap = { workspace = true }
base64 = { workspace = true }
tempfile = "3"
# Session 159: the `lvqr-moq-sample-pusher` bin needs `moq-native`
# for the outbound MoQ subscriber session, `moq-lite` directly to
# name the announcement / broadcast consumer types, and `url` for
# parsing both the relay URL and the SLO endpoint URL. All three
# are already in the workspace dep graph (moq-native + moq-lite via
# lvqr-cluster::federation, url via lvqr-cluster + lvqr-relay);
# naming them as direct deps here documents the bin's reliance.
moq-native = { workspace = true }
moq-lite = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Session 155: drives a real RTMP publisher session against the
# relay's RTMP listener; sends synthetic H.264 + an `onCuePoint
# scte35-bin64` AMF0 Data message; used by the new
# `bindings/js/tests/e2e/dvr-player/markers.spec.ts` Playwright e2e
# (gated on LVQR_LIVE_RTMP_TESTS=1) and by the
# `tests/scte35_rtmp_push_smoke.rs` Rust integration test.
[[bin]]
name = "scte35-rtmp-push"
path = "src/bin/scte35_rtmp_push.rs"

# Session 159: subscribes to `<broadcast>/0.mp4` + `<broadcast>/0.timing`
# on the relay, joins anchors against video frames, and pushes
# pure-MoQ glass-to-glass samples to `POST /api/v1/slo/client-sample`.
# Phase A v1.1 #5 close-out (the last open roadmap row).
[[bin]]
name = "lvqr-moq-sample-pusher"
path = "src/bin/moq_sample_pusher.rs"
